--- a/css/styles.css
+++ b/css/styles.css
@@ -3,3 +3,49 @@ Padding: 0;
 Margin: 0;
 box-sizing: border-box;
 }
+
+header{
+height: 150px;
+background: orange;
+}
+
+Nav{
+height: 50px;
+background: red;
+}
+
+#wrapper{
+width: 940px;
+background: tan;
+margin: 0 auto 0 auto;
+}
+
+#hero{
+width: auto;
+height: 300px;
+background: gray;
+}
+
+main{
+height: 600px;
+width: 48.93%;
+background: maroon;
+margin-right: 0.02%;
+float: left;
+}
+
+aside{
+height: 600px;
+width: 48.93%;
+float: right;
+background: green;
+}
+
+footer{
+height: 150px;
+background: orange;
+clear: both;
+
+}
+
+
