--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@ float: right;
 text-align: center;
 line-height: 160px;
 }
-
+/*************main nav bar***********************/
 #primary {
 height: 50px;
 background: red;
@@ -56,7 +56,13 @@ display: block;
 #primary a:hover{
 background: pink;
 }
-
+/*****************start of second nav*************/
+#secondary li{
+line-height: 40px;
+height: 40px;
+list-style-type: none;
+}
+/*******************wrapper***********************/
 #wrapper {
 width: 940px;
 max-width: 1100px;
