--- a/css/styles.css
+++ b/css/styles.css
@@ -7,9 +7,22 @@ box-sizing: border-box;
 body{
 background-image: url(../images/top-view-of-fern-leaves-3473569.jpg);
 font-size: 100%;
-
 }
 
+.embed-container { 
+position: relative; 
+padding-bottom: 56.25%; 
+height: 0;
+overflow: hidden; 
+max-width: 100%; 
+} 
+
+.embed-container iframe, .embed-container object, .embed-container embed { position: absolute; 
+top: 0; 
+left: 0; 
+width: 100%; 
+height: 100%; 
+}
 /****************** header ***********************/
 
 header{
@@ -118,10 +131,11 @@ margin: 160px auto 0px auto;
 }
 
 main{
+margin-top: 20px;
 width: 580px;
 background: #485359;
-margin-right: 0.02%;
-margin-bottom: 20px;
+margin-right: 20px;
+margin-bottom: 60px;
 padding-bottom: 20px;
 float: left;
 font-family: 'source_sans_proregular';
@@ -151,19 +165,39 @@ font-family: 'nobilebold_italic';
 }
 
 aside{
-height: 300px;
 width: 340px;
 float: right;
 overflow: hidden;
+margin-top: 20px;
 }
+
 .first{
 background-image: url(../images/technology-music.jpg);
+height: 300px;
 }
 .second{
-margin-top: 20px;
 border: black solid 2px;
-background-image: url(../images/Synths_EL.jpg)
+background-image: url(../images/Synths_EL.jpg);
+height: 300px;
 }
+.map{
+height: 710px;
+}
+.innermap{
+background-color: #485359;
+padding-bottom: 10px;
+padding-left: 20px;
+}
+
+h3{
+font-family: 'nobilebold_italic';
+}
+
+.innermap p{
+font-family: 'source_sans_proregular';
+}
+
+
 /********************* rows *************************/
 
 .row{
@@ -217,7 +251,6 @@ line-height: 50px;
 
 form{
 max-width: 100%;
-
 }
 
 fieldset{
@@ -226,28 +259,33 @@ width: 460px;
 padding-left: 10px;
 padding-right: 10px;
 margin: 0 auto 0 auto;
-/*border: none;*/
+border: solid black 1.2px;
 }
 
 legend{
 margin-bottom: 20px;
+font-family: 'nobilemedium';
+font-size: 1em;
+padding: 0 1.08%;
 }
 
 label {
 display:block;
 margin-bottom: 5px;
+font-family: 'source_sans_proregular';
+font-weight: 600;
 }
 
-input{
-margin-bottom: 10px;
-width: 80%;
-}
 form ul{
-margin-left: 20px;
+margin-left: 40px;
 margin-bottom: 20px;
+margin-top: 10px;
+font-family: 'source_sans_proregular';
 }
+
 form li{
 list-style-type: none;
+/*font-family: 'source_sans_proregular';*/
 
 }
 input[type="checkbox"]{
@@ -264,7 +302,23 @@ margin-bottom: 10px;
 font-size: 1.1em;
 }
 
+input[type="submit"]{
+width:auto;
+margin-bottom: 20px;
+}
 
+input[type="text"],input[type="email"]{
+width: 90%;
+height: 30px;
+margin-bottom: 20px;
+} 
+#studio{
+margin-top: 5px;
+margin-bottom: 20px;
+}
+#comments{
+margin-bottom: 10px;
+}
 
 /********************* footer ***********************/
 
