styles the thx.html page

--- a/css/styles.css
+++ b/css/styles.css
@@ -135,7 +135,7 @@ margin-top: 20px;
 width: 580px;
 background: #485359;
 margin-right: 20px;
-margin-bottom: 60px;
+margin-bottom: 40px;
 padding-bottom: 20px;
 float: left;
 font-family: 'source_sans_proregular';
@@ -150,7 +150,6 @@ padding-left: 20px;
 }
 
 main p{
-padding-left: 20px;
 padding-right: 20px;
 padding-top: 20px;
 line-height: 1.4;
@@ -203,10 +202,9 @@ font-family: 'source_sans_proregular';
 .row{
 height: 340px;
 width: 100%;
-/*background: green;*/
 margin-bottom: 20px;
 clear: both;
-padding-top: 40px;
+padding-top: 20px;
 }
 
 .third{
@@ -254,7 +252,6 @@ max-width: 100%;
 }
 
 fieldset{
-/*border: none;*/
 width: 460px;
 padding-left: 10px;
 padding-right: 10px;
@@ -285,7 +282,6 @@ font-family: 'source_sans_proregular';
 
 form li{
 list-style-type: none;
-/*font-family: 'source_sans_proregular';*/
 
 }
 input[type="checkbox"]{
@@ -318,6 +314,30 @@ margin-bottom: 20px;
 }
 #comments{
 margin-bottom: 10px;
+}
+
+/********************* thx page *********************/
+
+.thx{
+height: 700px;
+}
+
+/********************* staff page *******************/
+
+.staffmain{
+width: 700px;
+height: 900px;
+}
+
+.inner3{
+width: 660px;
+height 200px;
+margin: 20px 20px 0 20px;
+}
+.inner3 p{
+padding-left: 0px;
+padding-top: 0px;
+padding-bottom: 10px;
 }
 
 /********************* footer ***********************/
@@ -353,6 +373,7 @@ height: 45px;
 .blueberry{ 
 max-width: 960px;
 }
+
 /****************************************************/
 
 @font-face {
