--- a/css/styles.css
+++ b/css/styles.css
@@ -133,7 +133,7 @@ margin: 160px auto 0px auto;
 main{
 margin-top: 20px;
 width: 580px;
-background: #485359;
+background: #869BA6;
 margin-right: 20px;
 margin-bottom: 40px;
 padding-bottom: 20px;
@@ -215,7 +215,7 @@ height: 710px;
 }
 
 .innermap{
-background-color: #485359;
+background-color: #869BA6;
 padding-bottom: 10px;
 padding-left: 20px;
 }
@@ -245,7 +245,7 @@ padding-top: 20px;
 .third{
 height: 280px;
 width: 300px;
-background: #485359;
+background: #869BA6;
 float: left;
 border: solid black 1px;
 font-family: 'nobilebold_italic';
